# hymn-ocr

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
_plan/: CONTEXT.md  PROGRESS.md
_plan/plan_01/: PLAN.md  PROGRESS.md
_plan/plan_02/: CONTEXT.md  DECISIONS.md  ISSUES.md  PLAN.md  PROGRESS.md
_plan/plan_03/: CONTEXT.md  DECISIONS.md  ISSUES.md  PLAN.md  PROGRESS.md
_plan/plan_04/: PLAN.md  PROGRESS.md
_plan/plan_05/: PROGRESS.md
_plan/plan_06/: PROGRESS.md
scripts/: debug_repetition.py  validate_ocr.py
src/hymn_ocr/: __init__.py  cli.py  merger.py  models.py  ocr_engine.py  parser.py  pdf_processor.py  pipeline.py  repetition_detector.py  repetition_detector_v2.py  yaml_generator.py  zone_detector.py
tests/: __init__.py  conftest.py  test_merger.py  test_models.py  test_ocr_engine.py  test_parser.py  test_pdf_processor.py  test_repetition_detector.py  test_yaml_generator.py  test_zone_detector.py
