[tool.poetry]
name = "hymn-ocr"
version = "0.3.1"
description = "Convert PDF hymnals to YAML using OCR and computer vision"
authors = ["Nitai Vital <nitai@vital.dev>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/nitaibezerra/hymn-ocr"
repository = "https://github.com/nitaibezerra/hymn-ocr"
keywords = ["ocr", "pdf", "hymn", "hymnal", "yaml", "tesseract", "computer-vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Religion",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Capture :: Scanners",
    "Topic :: Text Processing :: General",
]
packages = [{include = "hymn_ocr", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pdf2image = "^1.17.0"
opencv-python = "^4.9.0"
pytesseract = "^0.3.10"
pillow = "^10.0.0"
pydantic = "^2.5.0"
pyyaml = "^6.0"
typer = "^0.15.0"
rich = "^13.0.0"
numpy = "^1.26.0"
scipy = "^1.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.5.0"
ruff = "^0.1.0"
matplotlib = "^3.10.8"

[tool.poetry.scripts]
hymn-ocr = "hymn_ocr.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/hymn_ocr"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
